--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://45.207.193.12:3306/management?useSSL=true&useUnicode=true&characterEncoding=utf-8
+url=jdbc:mysql://localhost:3306/management
 userName=root
 password=Czy200411@
